title gap related issues fixed

--- a/assets/css/wpsp-post.css
+++ b/assets/css/wpsp-post.css
@@ -155,6 +155,9 @@ h5.title {
     gap: 8px;
     margin-bottom: 24px;
 }
+.card--title.info {
+    gap: 4px;
+}
 .select--wrapper {
     margin-bottom: 16px;
 }
@@ -194,7 +197,7 @@ h5.title {
     background: #F3F2FF;
     padding: 6px;
     font-size: 14px;
-    line-height: 16px;
+    line-height: .8em;
     font-weight: 500;
     color: #6C62FF;
 }
@@ -466,7 +469,7 @@ button.secondary-btn {
 }
 .tab--content .thumbnail {
     max-width: 60px;
-    max-height: 8px;
+    max-height: 80px;
     object-fit: cover;
     border-radius: 4px;
     cursor: pointer;
